add hero section

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,39 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1 class="text-size-h1">Hello, World!</h1>
+    <div class="section-hero">
+        <h1 class="text-size-h1 heading text-color-white text-center">The Rise and Fall<br>of <span class="text-color-blu">Netscape</span>.</h1>
+        <p class="text text-caption text-color-white text-center">Maaz Ullah • Donald Ejelli • Luca Sprocati • Luca Scarpellotti</p>
+    </div>
+
+    <div class="section-cards">
+        <div class="card text text-color-white">
+            <img src="./assets/marc_andreessen_and_jim_clark.jpeg" alt="marc_andreessen_and_jim_clark">
+            <div class="container">
+                <h5 class="text-size-h4 heading text-color-white">La Fondazione Audace</h5>
+                <p class="text text-color-white">
+                    Netscape Communications Corporation, fondata da Marc Andreessen e Jim Clark, scommise audacemente sul futuro del World Wide Web.
+                </p>
+            </div>
+        </div>
+        <div class="card text text-color-white">
+            <img src="./assets/netscape_navigator_cd.jpeg" alt="marc_andreessen_and_jim_clark">
+            <div class="container">
+                <h5 class="text-size-h4 heading text-color-white">L'Emergere del Netscape Navigator</h5>
+                <p class="text text-color-white">
+                    Esaminiamo il Netscape Navigator, il browser all'avanguardia che ha conquistato il cuore degli utenti, portando la navigazione web a nuove vette.
+                </p>
+            </div>
+        </div>
+        <div class="card text text-color-white">
+            <img src="./assets/javascript.png" alt="javascript">
+            <div class="container">
+                <h5 class="text-size-h4 heading text-color-white">La Corsa all'Innovazione</h5>
+                <p class="text text-color-white">
+                    Netscape era noto per essere un pioniere dell'innovazione, introducendo funzionalità e tecnologie avanzate che hanno ridefinito il modo in cui interagiamo con il web.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
