fix cards and change coloor

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="card text text-color-white">
-            <img src="./assets/javascript.png" alt="javascript">
+            <img src="./assets/technology.webp" alt="javascript">
             <div class="container">
                 <h5 class="text-size-h4 heading text-color-white">La Corsa all'Innovazione</h5>
                 <p class="text text-color-white">
