add section scelta strategica

--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,29 @@
             </div>
         </div>
     </div>
+
+    <div class="section-scelta-strategica container">
+        <div class="content">
+            <div class="wrapper">
+                <h2 class="text-size-h2 text-color-white">La Scelta Strategica di Netscape</h2>
+                <p class="text text-wrapped text-color-white">
+                    Netscape adottò una strategia audace posizionando il suo browser come il principale strumento di navigazione in un periodo in cui il web stava iniziando a guadagnare popolarità. Tuttavia, la chiave del successo in questo settore è rappresentata dalle esternalità di rete, che Netscape non riuscì a sfruttare appieno.
+                </p>
+                <div class="card-group">
+                    <div class="card card-center" style="height: 150px;">
+                        <div class="container">
+                            <p class="text text-color-white">Netscape puntò sulla superiorità del suo Netscape Navigator, credendo che la qualità avrebbe naturalmente attirato utenti e sviluppatori.</p>
+                        </div>
+                    </div>
+                    <div class="card card-center" style="height: 150px;">
+                        <div class="container">
+                            <p class="text text-color-white">Netscape non ha potuto attrarre gli sviluppatori, limitando l'espansione del browser. Questo deficit di positive feedback ha indebolito la competitività di Netscape.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/netscape.jpeg" alt="">
+        </div>
+    </div>
 </body>
 </html>
