add quote section

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="card text text-color-white">
-            <img src="./assets/technology.webp" alt="javascript">
+            <img src="./assets/netcommunity.jpg" alt="javascript">
             <div class="container">
                 <h5 class="text-size-h4 heading text-color-white">La Corsa all'Innovazione</h5>
                 <p class="text text-color-white">
@@ -65,6 +65,10 @@
             </div>
             <img src="./assets/netscape.jpeg" alt="">
         </div>
+    </div>
+
+    <div class="section-quote">
+        <h1 class="heading text-size-h1 text-color-white text-center">"My goal is not to fail fast. My goal is to succeed over the long run. They are not the same thing."</h1>
     </div>
 </body>
 </html>
