add tiles section

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="card text text-color-white">
             <img src="./assets/marc_andreessen_and_jim_clark.jpeg" alt="marc_andreessen_and_jim_clark">
             <div class="container">
-                <h5 class="text-size-h4 heading text-color-white">La Fondazione Audace</h5>
+                <h4 class="text-size-h4 heading text-color-white">La Fondazione Audace</h4>
                 <p class="text text-color-white">
                     Netscape Communications Corporation, fondata da Marc Andreessen e Jim Clark, scommise audacemente sul futuro del World Wide Web.
                 </p>
@@ -26,7 +26,7 @@
         <div class="card text text-color-white">
             <img src="./assets/netscape_navigator_cd.jpeg" alt="marc_andreessen_and_jim_clark">
             <div class="container">
-                <h5 class="text-size-h4 heading text-color-white">L'Emergere del Netscape Navigator</h5>
+                <h4 class="text-size-h4 heading text-color-white">L'Emergere del Netscape Navigator</h4>
                 <p class="text text-color-white">
                     Esaminiamo il Netscape Navigator, il browser all'avanguardia che ha conquistato il cuore degli utenti, portando la navigazione web a nuove vette.
                 </p>
@@ -35,7 +35,7 @@
         <div class="card text text-color-white">
             <img src="./assets/netcommunity.jpg" alt="javascript">
             <div class="container">
-                <h5 class="text-size-h4 heading text-color-white">La Corsa all'Innovazione</h5>
+                <h4 class="text-size-h4 heading text-color-white">La Corsa all'Innovazione</h4>
                 <p class="text text-color-white">
                     Netscape era noto per essere un pioniere dell'innovazione, introducendo funzionalità e tecnologie avanzate che hanno ridefinito il modo in cui interagiamo con il web.
                 </p>
@@ -69,6 +69,51 @@
 
     <div class="section-quote">
         <h1 class="heading text-size-h1 text-color-white text-center">"My goal is not to fail fast. My goal is to succeed over the long run. They are not the same thing."</h1>
+    </div>
+
+    <div class="section-tiles">
+        <div class="tile-item text-color-white">
+            <div class="content">
+                <h4 class="heading text-size-h2 text-color-white">1994: Il Lancio del Netscape Navigator</h4>
+                <p class="text text-color-white">Netscape fece il suo ingresso trionfante nel mercato dei browser con il Netscape Navigator. Questo innovativo software, lanciato nel 1994, offrì agli utenti un modo rivoluzionario per esplorare il World Wide Web, stabilendo Netscape come leader indiscusso nel settore.</p>
+            </div>
+        </div>
+        <div class="tile-item text-color-white">
+            <div class="content">
+                <h4 class="heading text-size-h2 text-color-white">La Guerra dei Browser con Microsoft</h4>
+                <p class="text text-color-white">
+                    Negli anni '90, Netscape si trovò al centro di una titanica "guerra dei browser" con Microsoft. Il gigante del software, percependo la crescente importanza dei browser nella navigazione online, decise di entrare aggressivamente nel mercato. Introdusse Internet Explorer, distribuendolo gratuitamente e integrandolo con il sistema operativo Windows.
+                    
+                    Questa mossa di Microsoft generò polemiche sulle pratiche anticoncorrenziali. La distribuzione predefinita di Internet Explorer su Windows pose Netscape in una posizione svantaggiata, limitando la scelta degli utenti e influenzando il mercato. La battaglia per la supremazia dei browser raggiunse l'apice, e Netscape, nonostante i suoi primi successi, si ritrovò in una lotta difficile contro la strategia aggressiva di Microsoft, che alla fine contribuì al declino dell'azienda. La guerra dei browser simboleggiò il rapido cambiamento del panorama tecnologico e la competitività spietata che caratterizzava l'era.
+                </p>
+            </div>
+        </div>
+        <div class="tile-item text-color-white">
+            <div class="content">
+                <h4 class="heading text-size-h2 text-color-white">Il Legacy di Netscape</h4>
+                <p class="text text-color-white">
+                    Il contributo di Netscape va oltre la mera cronologia aziendale. Il Netscape Navigator è stato un catalizzatore fondamentale nella democratizzazione dell'accesso al World Wide Web. La sua interfaccia intuitiva e le caratteristiche all'avanguardia hanno trasformato la navigazione online da un'esperienza riservata a pochi in un fenomeno di massa, aprendo le porte all'era della "Navigazione del Web" per tutti.
+                    
+                    Il Netscape Navigator ha anche giocato un ruolo cruciale nella standardizzazione del web. L'introduzione di protocolli come HTTPS e l'implementazione di tag HTML innovativi hanno gettato le basi per gli standard web moderni, che persistono ancora oggi. Netscape ha lasciato un'eredità tecnologica permanente, influenzando lo sviluppo dei successivi browser e contribuendo all'evoluzione continua del panorama digitale.
+
+                    La "guerra dei browser" tra Netscape e Microsoft è diventata una saga simbolica che ha delineato i contorni del competitivo mondo digitale emergente. La vicenda di Netscape è spesso citata come uno studio di caso, illustrando le sfide delle aziende tecnologiche durante periodi di rapido cambiamento.
+
+                    Nonostante la sua scomparsa come entità indipendente, il nome "Netscape" risuona come un'icona di innovazione, intraprendenza e resilienza nel campo della tecnologia. La sua storia è una fonte di ispirazione per le generazioni successive, un monito sulla necessità di adattarsi, innovare costantemente e anticipare le mutevoli dinamiche del mondo digitale.
+                </p>
+            </div>
+        </div>
+        <div class="tile-item text-color-white">
+            <div class="content">
+                <h4 class="heading text-size-h2 text-color-white">La "Netscape Moment" e l'IPO del 1995</h4>
+                <p class="text text-color-white">L'ascesa di Netscape culminò nella sua offerta pubblica iniziale (IPO) nel 1995, una delle più iconiche della storia. Il termine "Netscape Moment" divenne simbolo del fervore e dell'entusiasmo per le aziende legate all'Internet durante quel periodo, aprendo la strada a una nuova era nell'industria tecnologica.</p>
+            </div>
+        </div>
+        <div class="tile-item text-color-white">
+            <div class="content">
+                <h4 class="heading text-size-h2 text-color-white">L'Acquisizione da Parte di AOL nel 1998</h4>
+                <p class="text text-color-white">Con la perdita di terreno nel mercato e la pressione concorrenziale, Netscape accettò un'acquisizione storica da parte di America Online (AOL) nel 1998, al costo di circa 4,2 miliardi di dollari. Questo segnò una svolta significativa nella storia di Netscape, poiché l'azienda si unì a uno dei principali provider di servizi Internet dell'epoca. Tuttavia, l'acquisizione da parte di AOL segnò anche la fine dell'indipendenza di Netscape e rappresentò un capitolo finale nell'evoluzione di un'iconica azienda del settore tecnologico degli anni '90.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
