add info and image section

--- a/src/index.html
+++ b/src/index.html
@@ -114,5 +114,24 @@
             </div>
         </div>
     </div>
+
+    <div class="section-info container">
+        <div class="infobox">
+            <div class="box"></div>
+            <div class="content container">
+                <h2 class="heading text-size-h2 text-color-white">Esternalità di Rete</h2>
+                <p class="text text-color-white">Le esternalità di rete si verificano quando il valore di un prodotto o servizio aumenta con il numero di persone che lo utilizzano. Nel contesto dei browser web, ciò significa che un browser diventa più attraente quanto più è diffuso, poiché offre una migliore compatibilità e accesso a una vasta gamma di contenuti.</p>
+            </div>
+        </div>
+        <div class="infobox">
+            <div class="box"></div>
+            <div class="content container">
+                <h2 class="heading text-size-h2 text-color-white">Positive Feedback</h2>
+                <p class="text text-color-white">I browser come Netscape avrebbero potuto beneficiare enormemente da positive feedback: più utenti avrebbero attratto più sviluppatori, portando a una maggiore varietà di contenuti e, di conseguenza, attirando nuovi utenti. Tuttavia, questa dinamica non si è mai completamente sviluppata per Netscape.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section-image"></div>
 </body>
 </html>
