--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,25 @@
         </div>
     </div>
 
-    <div class="section-image"></div>
+    <div class="section-image">
+        <h1 class="heading text-size-h1 text-color-white text-center">"We faced the 800-pound gorilla and it stomped us into the dirt."</h1>
+    </div>
+
+    <div class="section-conclusione">
+        <div class="content">
+            <p class="text text-size-h4 text-color-white">
+                Con il passare del tempo, Netscape si trovò in una posizione sempre più difficile, incapace di competere efficacemente con la concorrenza di Microsoft e di sfruttare le esternalità di rete. Nel 1998, la società fu acquisita da AOL, segnando la fine del Netscape Navigator.
+            </p>
+            <div class="chart">
+                <small class="text-caption text-color-white">utilizzo di netscape navigator negli anni</small>
+                <object data="./assets/netscape_usage_data.svg" type="image/svg+xml"></object>
+            </div>
+        </div>
+        <div>
+            <p class="heading text-color-white text-size-h2 text-center">
+                La vicenda di Netscape è un'illustrazione eloquente di come l'assenza di esternalità di rete possa compromettere anche il più promettente dei progetti. L'importanza di costruire e mantenere un solido effetto di rete positivo rimane una lezione chiave per le aziende che cercano di prosperare in un mondo sempre più interconnesso e guidato dalla tecnologia.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
