--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,10 @@
         <div class="content">
             <div class="wrapper">
                 <h2 class="text-size-h2 text-color-white">La Scelta Strategica di Netscape</h2>
-                <p class="text text-wrapped text-color-white">
+                <p class="text text-color-white">
                     Netscape adottò una strategia audace posizionando il suo browser come il principale strumento di navigazione in un periodo in cui il web stava iniziando a guadagnare popolarità. Tuttavia, la chiave del successo in questo settore è rappresentata dalle esternalità di rete, che Netscape non riuscì a sfruttare appieno.
                 </p>
-                <div class="card-group">
+                <div class="">
                     <div class="card card-center" style="height: 150px;">
                         <div class="container">
                             <p class="text text-color-white">Netscape puntò sulla superiorità del suo Netscape Navigator, credendo che la qualità avrebbe naturalmente attirato utenti e sviluppatori.</p>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="section-quote">
-        <h1 class="heading text-size-h1 text-color-white text-center">"My goal is not to fail fast. My goal is to succeed over the long run. They are not the same thing."</h1>
+        <h1 class="heading text-size-h5 text-color-white">"My goal is not to fail fast. My goal is to succeed over the long run. They are not the same thing."</h1>
     </div>
 
     <div class="section-tiles">
@@ -133,24 +133,24 @@
     </div>
 
     <div class="section-image">
-        <h1 class="heading text-size-h1 text-color-white text-center">"We faced the 800-pound gorilla and it stomped us into the dirt."</h1>
+        <h1 class="heading text-size-h4 text-color-white text-center">"We faced the 800-pound gorilla and it stomped us into the dirt."</h1>
     </div>
 
     <div class="section-conclusione">
         <div class="content">
+            <div class="chart">
+                <object data="./assets/netscape_usage_data.svg" type="image/svg+xml"></object>
+                <small class="text-caption text-color-white">utilizzo di netscape navigator negli anni</small>
+            </div>
             <p class="text text-size-h4 text-color-white">
                 Con il passare del tempo, Netscape si trovò in una posizione sempre più difficile, incapace di competere efficacemente con la concorrenza di Microsoft e di sfruttare le esternalità di rete. Nel 1998, la società fu acquisita da AOL, segnando la fine del Netscape Navigator.
             </p>
-            <div class="chart">
-                <small class="text-caption text-color-white">utilizzo di netscape navigator negli anni</small>
-                <object data="./assets/netscape_usage_data.svg" type="image/svg+xml"></object>
-            </div>
         </div>
-        <div>
-            <p class="heading text-color-white text-size-h2 text-center">
+        <!-- <div>
+            <p class="heading text-color-white text-size-h4 text-center">
                 La vicenda di Netscape è un'illustrazione eloquente di come l'assenza di esternalità di rete possa compromettere anche il più promettente dei progetti. L'importanza di costruire e mantenere un solido effetto di rete positivo rimane una lezione chiave per le aziende che cercano di prosperare in un mondo sempre più interconnesso e guidato dalla tecnologia.
             </p>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
