add footer section

--- a/src/index.html
+++ b/src/index.html
@@ -152,5 +152,15 @@
             </p>
         </div> -->
     </div>
+
+    <div class="section-footer">
+        <div>
+            <p class="texxt text-color-white">
+                Grazie per aver esplorato con noi il viaggio di Netscape, un pioniere che ha modellato il panorama digitale. Questo sito è dedicato a preservare la storia e il contributo di Netscape al mondo della tecnologia.
+            </p>
+            <img src="./assets/monkey.jpeg" alt="monkey">
+        </div>
+        <small class="text text-center text-color-white">Designed & Made with ❤️ by <a href="https://github.com/PizzaPiee">Maaz</a></small>
+    </div>
 </body>
 </html>
